--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <meta name="description" content="Interactive Web Art">
         <meta name="author" content="JM Revagorda & Rianne Garcia">
         <meta name="keywords" content="Interactive, Art, Art Blog, flea-in-a-jar">
+        <meta name="google-site-verification" content="kxVdUoJAqz0bcxRpluSemXUK_7p3PdttWSvJy9bqUSI" />
 
         <!-- Scripts -->
         <script src="https://www.gstatic.com/charts/loader.js"></script>
@@ -293,7 +294,7 @@
         <hr/>
         <span style="display: block;" onclick="location.href='map.html'" onmouseover="this.style.cursor = 'pointer'"><p>MAP</p></span>
         <hr/>
-        <span style="display: block;" onclick="location.href='contacts.php'" onmouseover="this.style.cursor = 'pointer'"><p id="contact">Contact US!</p></span>
+        <span style="display: block;" onclick="location.href='contacts.html'" onmouseover="this.style.cursor = 'pointer'"><p id="contact">Contact US!</p></span>
         <hr/>
     </div>
     <!-- Slideshow system -->
