--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <meta name="author" content="JM Revagorda & Rianne Garcia">
         <meta name="keywords" content="Interactive, Art, Art Blog, flea-in-a-jar">
         <meta name="google-site-verification" content="kxVdUoJAqz0bcxRpluSemXUK_7p3PdttWSvJy9bqUSI" />
+        <meta http-equiv='cache-control' content='no-cache'> 
+        <meta http-equiv='expires' content='0'> 
+        <meta http-equiv='pragma' content='no-cache'>
 
         <!-- Scripts -->
         <script src="https://www.gstatic.com/charts/loader.js"></script>
@@ -260,8 +263,6 @@
                 grid-row: 3;
                 grid-column: 2;
                 width: 100%;
-                height: 950px;
-                border: 1px solid black;
                 background: url("images/chartareatest.jpg") no-repeat;
             }
              .footer {
@@ -272,16 +273,6 @@
                 z-index: 5;
             }
 
-        /* Animations */
-        /* .fade {
-            animation-name: fade;
-            animation-duration: 1.5s;
-        }
-
-        @keyframes fade {
-            from {opacity: .4}
-            to {opacity: 1}
-        } */
         </style>
     </head>
 <body>
@@ -362,7 +353,7 @@
     <!-- Chart Area(this is where you were supposed to see your data after answering the form.html) -->
         <div id="chartarea">
         <!-- <h1>You are feeling good today</h1> -->
-        <div id="myChart" style="width: 100%; height: 750px; border: 1px solid gray;"></div>
+        <div id="myChart" style="width: 100%; height: 750px;"></div>
     </div>
     <!-- Footer Area -->
     <div class="footer">
