--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <meta name="description" content="Interactive Web Art">
         <meta name="author" content="JM Revagorda & Rianne Garcia">
         <meta name="keywords" content="Interactive, Art, Art Blog, flea-in-a-jar">
+        <meta http-equiv="Allow" content="GET, POST, HEAD">
         <meta name="google-site-verification" content="kxVdUoJAqz0bcxRpluSemXUK_7p3PdttWSvJy9bqUSI" />
         <meta http-equiv='cache-control' content='no-cache'> 
         <meta http-equiv='expires' content='0'> 
