--- a/contacts.html
+++ b/contacts.html
@@ -3,6 +3,7 @@
     <head>
         <title>Flea In A Jar</title>
         <link rel="icon" type="image/x-icon" href="images/flea logo final.png"/>
+        <meta http-equiv="Allow" content="GET, POST, HEAD">
         <style>
             body{
                 background-image: url('images/paper\ texture.jpg');
