--- a/index.html
+++ b/index.html
@@ -264,7 +264,9 @@
                 grid-row: 3;
                 grid-column: 2;
                 width: 100%;
-                background: url("images/chartareatest.jpg") no-repeat;
+                background: url("images/chartareatest.jpg");
+		background-size: 150%;
+		background-position: center;
             }
              .footer {
                 background-color: white;
