--- a/contacts.html
+++ b/contacts.html
@@ -77,8 +77,7 @@
         </form>
     </div>
     <div class="iconarea">
-        <img src="images/flea logo final.png" width="20%" style="background-color: white;padding: 0% 0% 2%;">
-        <p style="position: absolute; top: 116%; left: 46%; color:black;"><b>Jo-Ri Designs</b></p>
+        <img src="images/team flea logo.png" width="20%" style="background-color: white;padding: 0% 0% 2%;">
         <br/>
         <br/>
         <img width="17%" style="padding: 0 1%;" src="twiiter-removebg-preview.png" onclick="location.href=''">
