--- a/about.html
+++ b/about.html
@@ -431,7 +431,7 @@
         </table>
     </div>
     <div class="modal">
-        <table class="detailedPaint" style="background-image: url('images/slide2.png'); background-size: contain;">
+        <table class="detailedPaint" style="background-image: url('images/slide2.jpg'); background-size: contain;">
             <tr>
                 <td style="text-align: center;"><img src="images/headertemp.png" width="40%"/></td>
             </tr>
