--- a/index.html
+++ b/index.html
@@ -279,14 +279,15 @@
 			display:none;
 		}
 	@media screen and (max-width: 800px){
-		*{
+		#dat3, .box, .header, .content, #chartarea, .footer, .click, .overlay, .up, .down, img{
 			display: none;
 		}
 		#errorScreen{
-			display: block;
 			margin: auto;
+			display: block;
+			text-align: center;
 		}
-	}
+	}}
         </style>
     </head>
 <body>
@@ -381,7 +382,6 @@
     <div class="overlay"></div>
 <div id="errorScreen">
 	<h1>ERROR!</h1>
-	<hr width="20%">
 	<p>Please view this website in Desktop! Thanks :)</p>
 </div>
 
